Update ESLint and Prettier configurations, add PostCSS configuration, and update HomeMeta component metadata in files

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
-    <meta name="viewport" content="width=device-widthvite.svg, initial-scale=1.0" />
-    <title>Youtube Thumbnail Downloader</title>
+    <meta
+      name="viewport"
+      content="width=device-widthvite.svg, initial-scale=1.0"
+    />
   </head>
   <body>
     <div id="root"></div>
